--- a/frontend/src/pages/home/homepage/home.css
+++ b/frontend/src/pages/home/homepage/home.css
@@ -3,6 +3,7 @@
     height: calc(100vh - 100px);
     display: flex;
     /* justify-content: space-around; */
+    position: relative;
     
 }
 .sideBar{
